<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/your_lunch"
            android:enabled="true"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/your_lunch"
            app:showAsAction="ifRoom" />


    <item
            android:id="@+id/settings"
            android:enabled="true"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/logout"
            android:enabled="true"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />

</menu>