<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/details_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".details.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:scaleType="fitXY"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/restaurant_details_floating_btn"
                app:srcCompat="@drawable/baseline_restaurant_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                app:elevation="8dp"
                android:layout_marginEnd="10dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/restaurant_details_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:textColor="#FFFFFF"
                        android:fontFamily="@font/alfa_slab_one"/>
                <RatingBar
...
